<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_title"
            android:layout_marginLeft="10dp"
            android:text="@string/main_title"
            android:textColor="#000000"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_user_edit"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_below="@+id/login_top_layout"
            android:textColor="#aaaaaa"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_edittext"
            android:hint="@string/login_user_hint"
            android:singleLine="true" />
        <EditText
            android:id="@+id/login_passwd_edit"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_below="@+id/login_user_edit"
            android:textColor="#aaaaaa"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_edittext"
            android:hint="@string/login_passwd_hint"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_Sign_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:layout_margin="20dp"
                android:text="@string/login_signIn"
                android:background="@drawable/signin_btn"
                android:textColor="#ffffff"
                android:onClick="onSignInBtnClicked" />

            <Button
                android:id="@+id/login_skip_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="45dp"
                android:layout_margin="20dp"
                android:text="@string/login_skip"
                android:background="@drawable/signin_btn"
                android:textColor="#ffffff"
                android:onClick="onSkipBtnClicked" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>